--- a/src/pages/Dialogs/Dialogs.module.css
+++ b/src/pages/Dialogs/Dialogs.module.css
@@ -1,10 +1,12 @@
 .dialogs {
-    display: grid;
-    grid-template-columns: 2fr 10fr;
+    display: flex;
+    justify-content: space-between;
+    padding: 10px 300px 10px 10px;
 }
 
 .dialogsItems {
     padding: 10px;
+    border-radius: 100%;
 }
 
 .messages {
